welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value baisseBroose
  baisseBroose()
  ^